--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "axios": "^0.18",
+    "axios": "^0.18.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.0.0",
-    "bootstrap-vue": "^2.0.0-rc.18",
-    "cross-env": "^5.1",
-    "filepond": "^4.3.7",
-    "filepond-plugin-image-preview": "^4.0.5",
-    "jquery": "^3.2",
-    "laravel-mix": "^4.0.7",
-    "lodash": "^4.17.5",
-    "popper.js": "^1.12",
+    "bootstrap-vue": "^2.0.4",
+    "cross-env": "^5.2.1",
+    "filepond": "^4.7.4",
+    "filepond-plugin-image-preview": "^4.5.0",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.4",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
     "resolve-url-loader": "^2.3.1",
-    "sass": "^1.15.2",
-    "sass-loader": "^7.1.0",
-    "startbootstrap-sb-admin-2": "^4.0.3",
+    "sass": "^1.23.3",
+    "sass-loader": "^7.3.1",
+    "startbootstrap-sb-admin-2": "^4.0.7",
     "vue": "^2.5.17",
-    "vue-axios": "^2.1.3",
-    "vue-filepond": "^5.1.0",
-    "vue-recaptcha": "^1.1.1"
+    "vue-axios": "^2.1.5",
+    "vue-filepond": "^5.1.3",
+    "vue-recaptcha": "^1.2.0"
   }
 }
